# verax-core

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FORMAL_PROOFS.md  LICENSE  Makefile  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  compliance-violation.md  config.yml  feature_request.md
.github/badges/: axiom-true-status.json  verax-true-status.json
.github/workflows/: axiom-compliance.yml  ci.yml  compliance-bot.yml  verax-compliance.yml
.verax/: config.toml
.verax/keys/: ephemeral-6a456e64.key  ephemeral-6a4572d6.key  ephemeral-6a45e928.key  ephemeral-6a45e935.key  ephemeral-6a45ef44.key  ephemeral-6a48954b.key  ephemeral-6a48959a.key  ephemeral-6a49061f.key  testkey.key
crates/axiom-cli/: Cargo.toml  README.md
crates/axiom-cli/src/: config.rs  main.rs  output.rs
crates/axiom-cli/src/commands/: benchmark.rs  completion.rs  consent.rs  convert.rs  did.rs  doctor.rs  encrypt.rs  examples.rs  explain.rs  export_cmd.rs  graph.rs  hash.rs  init.rs  inspect.rs  key.rs  lint.rs  log.rs  mod.rs  profile.rs  registry.rs  shell.rs  sign.rs  test_cmd.rs  tutorial.rs  verify.rs  version.rs
crates/axiom-cli/tests/: cli_tests.rs
crates/axiom-core/: Cargo.toml  README.md
crates/axiom-core-ffi/: Cargo.toml  README.md
crates/axiom-core-ffi/include/: axiom_core.h  axiom_plugin.h
crates/axiom-core-ffi/src/: lib.rs
crates/axiom-core-go/: axiom.go  axiom_test.go  conformance_suite.json  go.mod
crates/axiom-core-node/: Cargo.toml  README.md  package.json  test.js
crates/axiom-core-node/src/: lib.rs
crates/axiom-core-python/: Cargo.toml  README.md
crates/axiom-core-python/src/: axiom_core.py  lib.rs
crates/axiom-core/benches/: axiom_benchmarks.rs
crates/axiom-core/coq/: AxiomCore.v  README.md
crates/axiom-core/src/: artifact.rs  cbor.rs  cose.rs  ct.rs  error.rs  hash.rs  hsm.rs  lib.rs  predicate.rs  shred.rs  statement.rs  verify.rs
crates/axiom-core/tests/: axiom_use_cases.rs  conformance_tests.rs
crates/verax-cli/: Cargo.toml  README.md
crates/verax-cli/.verax/keys/: ephemeral-6a4923c4.key  ephemeral-6a492443.key  ephemeral-6a492dde.key
crates/verax-cli/src/: config.rs  main.rs  output.rs
crates/verax-cli/src/commands/: benchmark.rs  completion.rs  consent.rs  convert.rs  did.rs  doctor.rs  encrypt.rs  examples.rs  explain.rs  export_cmd.rs  graph.rs  hash.rs  init.rs  inspect.rs  key.rs  lint.rs  log.rs  mod.rs  registry.rs  shell.rs  sign.rs  test_cmd.rs  tutorial.rs  verify.rs  version.rs
crates/verax-cli/tests/: cli_tests.rs
crates/verax-core/: Cargo.toml  README.md
crates/verax-core-ffi/: Cargo.toml  README.md
crates/verax-core-ffi/include/: verax_core.h  verax_plugin.h
crates/verax-core-ffi/src/: lib.rs
crates/verax-core-go/: conformance_suite.json  go.mod  verax.go  verax_test.go
crates/verax-core-node/: Cargo.toml  README.md  package.json  test.js
crates/verax-core-node/src/: lib.rs
crates/verax-core-python/: Cargo.toml  README.md
crates/verax-core-python/src/: lib.rs  verax_core.py
crates/verax-core/benches/: verax_benchmarks.rs
crates/verax-core/coq/: README.md  VeraxCore.v
crates/verax-core/src/: artifact.rs  cbor.rs  cose.rs  ct.rs  error.rs  hsm.rs  lib.rs  predicate.rs  shred.rs  statement.rs  verify.rs
crates/verax-core/tests/: conformance_tests.rs  hardened_conformance.rs  verax_use_cases.rs
docs/: architecture.md  composite-signatures.md  getting-started.md  key-rotation.md  protocol-spec.md  security_audit.md  shredding.md
examples/: README.md
formal/lean4/: AxiomProofs.lean  README.md  VeraxProofs.lean  lakefile.lean
formal/lean4/AxiomProofs/: PredicateCompleteness.lean  SerializationInjectivity.lean
formal/lean4/VeraxProofs/: PredicateCompleteness.lean  SerializationInjectivity.lean
formal/tlaplus/: AxiomDAG.tla  README.md  VeraxDAG.cfg  VeraxDAG.tla
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cbor_decode.rs  fuzz_cose_parse.rs
scripts/: benchmark_baseline.json  check_benchmark_regression.sh  check_ffi_abi.sh  compliance_bot.py  differential_cbor_test.py  fresh_clone_test.sh  gen_conformance.py  spec_pin.json  trusted_ct_log_keys.json
test-vectors/: test_vectors.json
test-vectors/vectors/: conformance_suite.json  test_vectors.json
