[package]
name = "axiom-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
axiom-core = { path = "../crates/axiom-core" }
ed25519-dalek = { version = "2", default-features = false }
ml-dsa = { version = "=0.1.1", default-features = false, features = ["alloc"] }

[profile.release]
debug = 1

[[bin]]
name = "fuzz_cbor_decode"
path = "fuzz_targets/fuzz_cbor_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cose_parse"
path = "fuzz_targets/fuzz_cose_parse.rs"
test = false
doc = false
