[package]
name = "axiom-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axiom Protocol CLI — prove, verify, and trace provenance chains"

[dependencies]
axiom-core = { path = "../axiom-core" }
ed25519-dalek = { version = "2", default-features = false, features = ["digest", "zeroize"] }
ml-dsa = { version = "=0.1.1", default-features = false, features = ["alloc"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reedline = "0.37"
nu-ansi-term = "0.50"
getrandom = "0.2"
multibase = "0.9"
clap_complete = "4"
toml = "0.8"

[[bin]]
name = "axiom"
path = "src/main.rs"
