[package]
name = "axiom-core-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for Axiom Protocol Core (PyO3)"

[lib]
name = "axiom_core_python"
crate-type = ["cdylib"]

[dependencies]
axiom-core = { path = "../axiom-core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
ed25519-dalek = { version = "2", default-features = false }
ml-dsa = { version = "=0.1.1", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }

[target.'cfg(not(target_os = "windows"))'.dependencies]
getrandom = { version = "0.2", features = ["rdrand"] }
