[package]
name = "axiom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axiom Protocol Core — DAG-based verifiable provenance with deterministic CBOR encoding"

[lib]
crate-type = ["rlib"]
doctest = false

[features]
default = []
software-hsm = []
pkcs11-hsm = []
tpm-hsm = []

[dependencies]
blake3 = { version = "1", default-features = false }
ed25519-dalek = { version = "2", features = ["digest", "zeroize"], default-features = false }
ml-dsa = { version = "=0.1.1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
zeroize = { version = "1", features = ["zeroize_derive"], default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hpke = { version = "0.11", default-features = false, features = ["alloc", "x25519"] }

[[bin]]
name = "gen-test-vectors"
path = "src/bin/gen_test_vectors.rs"
required-features = []

[dev-dependencies]
rand = "0.8"
ml-dsa = { version = "=0.1.1", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2", default-features = false }
serde_json = "1"

[lints.rust]
unsafe_code = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
